# imgcomp

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md  compile.sh  launch.cpp  makefile
.github/workflows/: build.yml
cmake/: Pack.cmake
installer/: makeinstaller.sh
installer/imgcomp-deb/: install.sh
installer/imgcomp-deb/DEBIAN/: control  postinst
installer/imgcomp-targz/: install.sh
package/aur/: PKGBUILD
package/deb/: postinst
src/: imgcomp.cpp  imgcomp.h  imgcomp.hpp  main.cpp  util.cpp  util.h  util.hpp
src/com/files/: Files.java
src/com/main/: Args.java  ImageCompressorMain.java
